# Experimental

Somi/: cmu_template_matching.py  sensor_checker_state.py  target_hit.py  tracker_template_matching.py
Somi/somi_testing/: CMakeLists.txt  package.xml
Somi/somi_testing/src/sensor_check/: CMakeLists.txt  sensor_check.cc  sensor_check.h  sensor_check_node.cc
